--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "npm run dev",
     "dev": "node prebuild && rollup -w -c",
     "build": "node prebuild && rollup -c",
-    "pack": "npm run build && npm pack",
+    "clean": "rimraf lib es dist",
+    "pack": "npm run clean && npm run build && npm pack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
@@ -27,8 +28,8 @@
   "author": "pentamania",
   "license": "MIT",
   "devDependencies": {
-    "del-cli": "^3.0.0",
     "recursive-readdir": "^2.2.2",
+    "rimraf": "^3.0.2",
     "rollup": "^1.19.4",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-license": "^0.12.1",
